y-kustomize/y-kustomize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-kustomize
  labels:
    app: y-kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: y-kustomize
  template:
    metadata:
      labels:
        app: y-kustomize
    spec:
      serviceAccountName: y-kustomize
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      containers:
      - name: y-kustomize
        image: ghcr.io/yolean/y-cluster:v0.4.1@sha256:e1ac555b3ff18d5943fcdaa6390def4b471817efbfcb972e46ce5c74174630ef
        command: ["/usr/local/bin/y-cluster"]
        args:
        - serve
        - --foreground
        - --state-dir=/tmp/y-cluster-state
        - -c
        - /etc/y-cluster-serve
        ports:
        - containerPort: 8944
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: 8944
        livenessProbe:
          httpGet:
            path: /health
            port: 8944
        volumeMounts:
        - name: cfg
          mountPath: /etc/y-cluster-serve
          readOnly: true
        resources:
          requests:
            cpu: 5m
            memory: 16Mi
          limits:
            memory: 32Mi
      volumes:
      - name: cfg
        configMap:
          name: y-kustomize-serve
