y-kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-kustomize
  labels:
    app: y-kustomize
    yolean.se/module-part: gateway
spec:
  type: LoadBalancer
  selector:
    app: y-kustomize
  ports:
  - name: http
    port: 8944
    targetPort: 8787
