y-kustomize/y-kustomize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-kustomize
  labels:
    app: y-kustomize
spec:
  type: LoadBalancer
  selector:
    app: y-kustomize
  ports:
  - name: http
    port: 80
    targetPort: 8944
