y-kustomize/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: y-kustomize
spec:
  parentRefs:
  - name: ystack
  hostnames:
  - y-kustomize.ystack.svc.cluster.local
  rules:
  - backendRefs:
    - name: y-kustomize
      port: 80
